deployment/deployment.yml
#| filename: "deployment/deployment.yaml"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: softdtw-deployment
  labels:
    app: timeseriesforecast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeseriesforecast
  template:
    metadata:
      labels:
        app: timeseriesforecast
    spec:
      containers:
        - name: softdtw
          image: raeell/softdtwforecon:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
