deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: softdtwforecon-service
spec:
  selector:
    app: softdtwforecon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
